--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test-ui": "node node_modules/jasmine/bin/jasmine test/ui/spec/*.js",
     "test-ui-2": "node ./node_modules/.bin/jest",
     "setup": "npm i && npm i -g grunt grunt-cli && grunt build $$ npm rebuild --build-from-source",
-    "start": "grunt serve"
+    "start": "grunt serve",
+    "build": "webpack --config webpack.prod.js",
+    "build:dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "lint-staged": {
     "*.js": [
@@ -36,6 +38,7 @@
     "bootstrap": "^3.4.1",
     "bootstrap-colorpicker": "^2.5.3",
     "buffer": "~5.4.0",
+    "clean-webpack-plugin": "^3.0.0",
     "commander": "^4.0.1",
     "compressorjs": "^1.0.5",
     "data-uri-to-buffer": "^3.0.0",
@@ -78,9 +81,13 @@
     "@babel/core": "^7.4.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "^6.24.1",
     "babelify": "^10.0.0",
     "browserify": "16.5.0",
     "eslint": "^6.1.0",
+    "file-loader": "^5.0.2",
     "grunt": "^1.0.3",
     "grunt-browser-sync": "^2.2.0",
     "grunt-browserify": "^5.0.0",
@@ -88,6 +95,8 @@
     "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-text-replace": "^0.4.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^3.0.5",
     "image-filter-core": "~2.0.2",
     "image-filter-threshold": "~2.0.1",
@@ -102,7 +111,10 @@
     "tap-spec": "^5.0.0",
     "tape": "^4.9.2",
     "tape-run": "^6.0.0",
-    "uglify-es": "^3.3.7"
+    "uglify-es": "^3.3.7",
+    "webpack": "^4.41.5",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   },
   "husky": {
     "hooks": {
