--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "setup": "npm i && npm i -g grunt grunt-cli && grunt build $$ npm rebuild --build-from-source",
     "start": "grunt serve",
     "build": "webpack --config webpack.prod.js",
-    "build:dev": "webpack-dev-server --config webpack.dev.js --open"
+    "build:dev": "webpack-dev-server --config webpack.dev.js --hot --open"
   },
   "lint-staged": {
     "*.js": [
